--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "name": "flow_test",
+  "name": "use-test-flow",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/igorasantos/use-test-flow"
+  },
   "main": "lib/index.js",
   "devDependencies": {
     "@babel/cli": "^7.12.10",
